заново написана шапка+2 блока

--- a/new_project/css/style.css
+++ b/new_project/css/style.css
@@ -1,37 +1,29 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;600;700;800&display=swap');
-
-* {
+:root {
     box-sizing: border-box;
 }
 
-a {
-    text-decoration: none;
-}
-
-ul {
-    list-style: none;
-}
-
-html {
-    font-family: 'Montserrat', sans-serif;
+*,
+*::before,
+*::after {
+    box-sizing:inherit    
 }
 
 body {
-    width:1920px;
+    font-family: 'Montserrat', sans-serif;
     background-color: #FFFFFF;
     margin:0 auto;
 }
 
 .container {
     width:1770px;
-    margin: 0 auto;
+    /*margin: 0 auto;*/
 }
 
 /*header*/
 
-.header {
-    width: 1920px;
-    height: 100px;
+.header .container{
+    /*width: 1920px;*/
+    min-height: 100px;
     box-shadow: 0px 5px 40px rgba(0, 0, 0, 0.1);
 }
 
